positional all correct but not responsive

--- a/cauStyle.css
+++ b/cauStyle.css
@@ -120,19 +120,6 @@
 		font-size: 30px;
 	}
 	
-	
-	#black:hover {		/*Black card when hover*/
-		border: 1px solid #777;	
-		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-	}
-
-
-	#card:hover {		/*White cards when hover*/
-		border: 1px solid #777;	
-		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-	}
-	
-
 	div.playerList {		/*Other players' avatars*/
 		list-style-type:none;
 		float: left;
@@ -142,17 +129,98 @@
 	
 	aside {
 		float: left;
-		width: 16%;
+		width: 12%;
 		margin-top: 5%;
 	}
-
 
 	section {
 		
 		width: 84%;
+		float: right;
+
+
+	}
+
+	div.blackscenario {
+
+		position: relative;
+		width: 20%;	
+		min-height: 320px;
+		margin-right: 5%;
+
+	}
+
+	#blackimage {
+
+		position: absolute;
 	}
 
 
+	#blackCardHeader {
+		
+		color:white;
+		position: absolute;
+		width:100%;
+		
+	}
+
+	#blackCardText{
+		color: white;
+		margin-top: 120px;
+		
+	}
+
+	#black:hover {		/*Black card when hover*/
+		border: 1px solid #777;	
+		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	}
+
+	#cardContainer {
+		
+		display: inline-block;
+		position: relative;
+		width: 100%;
+		
+	}
+
+	.whiteImage {
+		
+		position: relative;
+		z-index: 0;
+		display: inline-block;
+		float: left;
+	}
+	
+	#whiteCardTable {
+
+		margin-top:110px;
+		position: absolute;
+		width: 100%;
+	}
+	
+	#whiteCardData {
+		width:225px;
+		text-align: center;
+		
+	}
+
+	#whiteCardData:hover {
+		
+		border-left:1px solid black;
+		border-right:2px solid black;
+
+	}
+
+	#card:hover {		/*White cards when hover*/
+		border: 1px solid #777;	
+		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	}
+
+	#submitAnswerBtn {
+		clear: both;	
+		margin-right: 18%;
+
+	}
 	#submit1{					/*Submit button on game page*/
 		left:220px;
 		position: relative;
@@ -178,72 +246,7 @@
 		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 	}
 
-	div.blackscenario {
 
-		position: relative;
-		margin-top: 15px;
-		width: 20%;	
-
-	}
-
-	#blackimage {
-
-		position: absolute;
-	}
-
-
-	#blackCardHeader {
-		
-		color:white;
-		position: absolute;
-		width:100%;
-		
-	}
-
-	#blackCardText{
-		color: white;
-		
-	}
-
-	#cardContainer {
-		
-		display: inline-block;
-		position: relative;
-		width: 100%;
-		
-	}
-
-	.whiteImage {
-		
-		position: relative;
-		z-index: 0;
-		display: inline-block;
-		float: left;
-	}
-
-	#whiteCardData {
-		width:225px;
-		text-align: center;
-		margin-top:500px;
-		
-	}
-
-	#whiteCardData:hover {
-		
-		border-left:1px solid black;
-		border-right:2px solid black;
-
-	}
-
-	#whiteCardTable {
-
-		margin-top:100px;
-		position: absolute;
-		width: 100%;
-	}
-	
-	
-	
 	/*Judging Page*/
   
   #radioOptions{			/*Radio button form*/
